--- a/res/menu/events_cab.xml
+++ b/res/menu/events_cab.xml
@@ -1,3 +1,4 @@
     <menu xmlns:android="http://schemas.android.com/apk/res/android">
         <item android:id="@+id/Acknowledge" android:title="Acknowledge Events" android:titleCondensed="Acknowledge" android:showAsAction="always|withText"></item>
+        <item android:id="@+id/escalate" android:icon="@drawable/ic_action_share" android:title="Escalate Event" android:showAsAction="always" android:titleCondensed="Escalate"></item>
     </menu>
