--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,82 +1,142 @@
-<PreferenceScreen
-        xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory
-            android:title="inline_preferences">
+    <PreferenceCategory android:title="Background Polling">
 
         <CheckBoxPreference
-                android:key="checkbox_preference"
-                android:title="title_checkbox_preference"
-                android:summary="summary_checkbox_preference" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-            android:title="dialog_based_preferences">
-
-        <EditTextPreference
-                android:key="edittext_preference"
-                android:title="title_edittext_preference"
-                android:summary="summary_edittext_preference"
-                android:dialogTitle="dialog_title_edittext_preference" />
-
+                android:key="refreshCache"
+                android:title="Cache Refresh"
+                android:summary="Checks Zenoss every ~30minutes to update the local database" 
+                android:defaultValue="true"
+                />
+        
+        <CheckBoxPreference
+                android:key="AllowBackgroundService"
+                android:title="Events Alerting"
+                android:summary="Checks Zenoss for new events and raises notifications based on filters below" 
+                android:defaultValue="true"
+                />
+        
         <ListPreference
-                android:key="list_preference"
-                android:title="title_list_preference"
-                android:summary="summary_list_preference"
-                android:entries="@array/entries_list_preference"
-                android:entryValues="@array/entryvalues_list_preference"
-                android:dialogTitle="dialog_title_list_preference" />
+                android:key="BackgroundServiceDelay"
+                android:dependency="AllowBackgroundService"
+                android:title="Poll Cycle"
+                android:summary="Duration between polling for new events"
+                android:entries="@array/BackgroundServiceDelay_preference"
+                android:entryValues="@array/BackgroundServiceDelay_preference_values"
+                android:defaultValue="60"
+                android:dialogTitle="Delay between Alerting Poll" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory
-            android:title="launch_preferences">
+    
+    
+    
+    
+    
+    <PreferenceCategory android:title="Event Filtering">
+
+        <CheckBoxPreference
+                android:key="SeverityCritical"
+                android:title="Critical Events"
+                android:summary="Query for (and alert on) Critical Events" 
+                android:defaultValue="true"
+                />
+        
+		<CheckBoxPreference
+                android:key="SeverityError"
+                android:title="Error Events"
+                android:summary="Query for (and alert on) Errors" 
+                android:defaultValue="true"
+                />
+		
+		<CheckBoxPreference
+                android:key="SeverityWarning"
+                android:title="Warning Events"
+                android:summary="Query for (and alert on) Warnings" 
+                android:defaultValue="true"
+                />
+		
+		<CheckBoxPreference
+                android:key="SeverityInfo"
+                android:title="Info Events"
+                android:summary="Query for (and alert on) Info Events" 
+                android:defaultValue="false"
+                />
+		
+		<CheckBoxPreference
+                android:key="SeverityDebug"
+                android:title="Debug Events"
+                android:summary="Query for (and alert on) Debug Events" 
+                android:defaultValue="false"
+                />
+
+    </PreferenceCategory>
+    
+    <PreferenceCategory android:title="Alert Filtering">
+        <CheckBoxPreference
+                android:key="onlyProductionAlerts"
+                android:title="Production Only"
+                android:summary="Only raise an alert for production devices." 
+                android:defaultValue="true"
+                android:dependency="AllowBackgroundService"
+                />
+        
+		<CheckBoxPreference
+                android:key="notificationSound"
+                android:title="Audible Alerts"
+                android:summary="When raising an Event alert use sound." 
+                android:defaultValue="true"
+                android:dependency="AllowBackgroundService"
+                />
+    </PreferenceCategory>
+    
+    
+    <PreferenceCategory android:title="Zenoss Configuration">
 
         <!-- This PreferenceScreen tag serves as a screen break (similar to page break
              in word processing). Like for other preference types, we assign a key
              here so it is able to save and restore its instance state. -->
         <PreferenceScreen
-                android:key="screen_preference"
-                android:title="title_screen_preference"
-                android:summary="summary_screen_preference">
+                android:key="zenoss_config"
+                android:title="Zenoss Configuration"
+                android:summary="Allows the configuration of Zenoss variables such as URL, username etc.">
 
-            <!-- You can place more preferences here that will be shown on the next screen. -->
-
-            <CheckBoxPreference
-                    android:key="next_screen_checkbox_preference"
-                    android:title="title_next_screen_toggle_preference"
-                    android:summary="summary_next_screen_toggle_preference" />
-
+            <EditTextPreference
+                android:key="URL"
+                android:title="Zenoss URL"
+                android:hint="https://zenoss.domain.com:8070"
+                android:summary="The full URL to your Zenoss istance including URI (http:// or https://) and the port (if not 80 / 443)"
+                android:dialogTitle="Zenoss URL" />
+            
+            <EditTextPreference
+                android:key="userName"
+                android:title="Zenoss User Name"
+                android:dialogTitle="Zenoss User Name" />
+            
+            <EditTextPreference
+                android:key="passWord"
+                android:title="Zenoss Password"
+                android:dialogTitle="Zenoss Password" />
+            
+            <PreferenceCategory android:title="Background Polling">
+	            <CheckBoxPreference
+	                    android:key="httpBasicAuth"
+	                    android:title="HTTP Basic Auth"
+	                    android:defaultValue="false"
+	                    android:summary="Enable HTTP Basic Auth headers to be sent when querying" />
+	            
+	            <EditTextPreference
+	                android:key="BAUser"
+	                android:title="Basic Auth User"
+	                android:dependency="httpBasicAuth"
+	                android:dialogTitle="HTTP Basic Auth User Name" />
+	            
+	            <EditTextPreference
+	                android:key="BAPassword"
+	                android:title="Basic Auth Password"
+	                android:dependency="httpBasicAuth"
+	                android:dialogTitle="HTTP Basic Auth Password" />
+			</PreferenceCategory>
         </PreferenceScreen>
-
-        <PreferenceScreen
-                android:title="title_intent_preference"
-                android:summary="summary_intent_preference">
-
-            <intent android:action="android.intent.action.VIEW"
-                    android:data="http://www.android.com" />
-
-        </PreferenceScreen>
-
     </PreferenceCategory>
-
-    <PreferenceCategory
-            android:title="preference_attributes">
-
-        <CheckBoxPreference
-                android:key="parent_checkbox_preference"
-                android:title="title_parent_preference"
-                android:summary="summary_parent_preference" />
-
-        <!-- The visual style of a child is defined by this styled theme attribute. -->
-        <CheckBoxPreference
-                android:key="child_checkbox_preference"
-                android:dependency="parent_checkbox_preference"
-                android:layout="?android:attr/preferenceLayoutChild"
-                android:title="title_child_preference"
-                android:summary="summary_child_preference" />
-
-    </PreferenceCategory>
-
 </PreferenceScreen>
