--- a/res/layout/devicelist.xml
+++ b/res/layout/devicelist.xml
@@ -1,9 +1,57 @@
 
-    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/background_gradient_2">
-        <RelativeLayout android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_width="fill_parent" android:id="@+id/HomeHeader" android:background="@drawable/home_title_tile" android:gravity="top" android:layout_height="65px">
-            <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:id="@+id/HomeHeaderTitle" android:textSize="32dp" android:layout_marginLeft="8dp" android:text="@string/deviceListTitle"></TextView>
-            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/top_menu_button_refresh" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:id="@+id/RefreshViewImage"></ImageView>
-            <TextView android:textSize="10dp" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/MessageText" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_toLeftOf="@+id/RefreshViewImage" android:text="@string/DefaultStatusMessageText"></TextView>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/relativeLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/background_gradient_2" >
+
+        <ListView
+            android:id="@+id/ZenossDeviceList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/StatsHolder"
+            android:layout_alignParentLeft="true"
+            android:cacheColorHint="#929ba4"
+            android:fadingEdge="vertical"
+            android:fastScrollEnabled="true"
+            android:isScrollContainer="true" >
+
+        </ListView>
+
+        <RelativeLayout
+            android:id="@+id/StatsHolder"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="false"
+            android:layout_centerHorizontal="true"
+            android:background="#75787a"
+            android:minHeight="60dp" >
+
+            <View
+                android:id="@+id/placeholder"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:background="#4a4c4d" /><ImageView
+            android:id="@+id/StatsImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="12dp"
+            android:src="@drawable/servers" />
+
+                <TextView
+                    android:id="@+id/ServerCountLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/StatsImage"
+                    android:text="Calculating server count..."
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+
         </RelativeLayout>
-        <ListView android:layout_width="match_parent" android:id="@+id/ZenossDeviceList" android:fadingEdge="vertical" android:isScrollContainer="true" android:layout_height="wrap_content" android:fastScrollEnabled="true" android:layout_alignParentLeft="true" android:layout_below="@+id/HomeHeader" android:cacheColorHint="#929ba4"></ListView>
+
     </RelativeLayout>
