--- a/res/menu/home_menu.xml
+++ b/res/menu/home_menu.xml
@@ -4,5 +4,7 @@
     <item android:id="@+id/escalate" android:icon="@drawable/ic_action_share" android:title="Escalate Event" android:showAsAction="always" android:titleCondensed="Escalate"></item>
     <item android:id="@+id/refresh" android:icon="@drawable/ic_action_refresh" android:title="Refresh" android:showAsAction="always"></item>
     <item android:id="@+id/cache" android:icon="@drawable/ic_action_cache" android:title="@string/homeMenu_ManageDB"></item>
-    <item android:id="@+id/settings" android:title="Settings" android:icon="@drawable/ic_action_settings"></item> 
+    <item android:id="@+id/settings" android:title="Settings" android:icon="@drawable/ic_action_settings"></item>
+    <item android:id="@+id/devices" android:icon="@drawable/ic_action_devices" android:title="Infrastructure" android:titleCondensed="Devices"></item>
+    <item android:id="@+id/search" android:title="Search" android:icon="@drawable/ic_action_search"></item> 
 </menu>
