--- a/res/menu/initial_settings.xml
+++ b/res/menu/initial_settings.xml
@@ -1,4 +1,3 @@
-
-    <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:id="@+id/save_settings" android:title="Save Settings" android:showAsAction="always|withText" android:titleCondensed="Save" android:icon="@drawable/ic_action_save"></item>
-    </menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+	<item android:id="@+id/save_settings" android:title="Save &amp; Login" android:showAsAction="always|withText" android:titleCondensed="Save &amp; Login" android:icon="@drawable/ic_action_save"></item>
+</menu>
