--- a/res/layout/manage_database.xml
+++ b/res/layout/manage_database.xml
@@ -9,15 +9,62 @@
 	    android:textAppearance="?android:attr/textAppearanceMedium" >
 </TextView>
 	<TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/sizeLabel" android:layout_alignBottom="@+id/sizeLabel" android:layout_toRightOf="@+id/sizeLabel" android:layout_marginLeft="22dp" android:id="@+id/dbSize" android:text="0bytes"></TextView>
-	<ImageView android:layout_height="wrap_content" android:src="@drawable/ic_menu_refresh" android:layout_width="wrap_content" android:layout_below="@+id/sizeLabel" android:layout_alignParentLeft="true" android:id="@+id/refreshCacheImageView" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"></ImageView>
-	<TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/RefreshLabel" android:layout_alignLeft="@+id/RefreshLabel" android:id="@+id/refreshDesc" android:text="@string/refreshDesc" android:textColor="#FFFFFF" android:layout_marginLeft="8dp"></TextView>
+
+	<ImageView
+	    android:id="@+id/refreshCacheImageView"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentLeft="true"
+	    android:layout_below="@+id/sizeLabel"
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginTop="10dp"
+	    android:contentDescription="Refresh Local Cache"
+	    android:src="@drawable/ic_menu_refresh" >
+</ImageView>
+
+	<TextView
+	    android:id="@+id/refreshDesc"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignLeft="@+id/RefreshLabel"
+	    android:layout_below="@+id/RefreshLabel"
+	    android:layout_marginLeft="8dp"
+	    android:layout_marginRight="8dp"
+	    android:text="@string/refreshDesc"
+	    android:textAppearance="?android:attr/textAppearanceSmall"
+	    android:textColor="#FFFFFF" >
+</TextView>
 	<TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/RefreshLabel" android:layout_alignTop="@+id/refreshCacheImageView" android:layout_toRightOf="@+id/refreshCacheImageView" android:textStyle="bold" android:text="@string/manageCache_RefreshTitle"></TextView>
 	<ImageView android:layout_height="wrap_content" android:src="@drawable/ic_menu_movesd" android:layout_width="wrap_content" android:layout_alignLeft="@+id/refreshCacheImageView" android:id="@+id/moveToSDImageView" android:layout_below="@+id/refreshDesc" android:layout_marginTop="10dp"></ImageView>
 	<TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignTop="@+id/moveToSDImageView" android:layout_toRightOf="@+id/moveToSDImageView" android:id="@+id/moveToSDLabel" android:textStyle="bold" android:text="@string/manageCache_moveToSDTitle"></TextView>
-	<TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/moveToSDLabel" android:layout_alignLeft="@+id/moveToSDLabel" android:id="@+id/moveToSDDesc" android:text="@string/moveToSDDesc" android:textColor="#FFFFFF" android:layout_marginLeft="8dp"></TextView>
+
+	<TextView
+	    android:id="@+id/moveToSDDesc"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignLeft="@+id/moveToSDLabel"
+	    android:layout_below="@+id/moveToSDLabel"
+	    android:layout_marginLeft="8dp"
+	    android:layout_marginRight="8dp"
+	    android:text="@string/moveToSDDesc"
+	    android:textAppearance="?android:attr/textAppearanceSmall"
+	    android:textColor="#FFFFFF" >
+</TextView>
 	<ImageView android:layout_height="wrap_content" android:src="@drawable/ic_menu_empty_db" android:layout_width="wrap_content" android:layout_alignLeft="@+id/moveToSDImageView" android:id="@+id/emptyDBImageView" android:layout_below="@+id/moveToSDDesc" android:layout_marginTop="10dp"></ImageView>
 	<TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignTop="@+id/emptyDBImageView" android:layout_toRightOf="@+id/emptyDBImageView" android:id="@+id/emptyDBLabel" android:textStyle="bold" android:text="@string/manageCache_emptyCacheTitle"></TextView>
-	<TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/emptyDBLabel" android:layout_alignLeft="@+id/emptyDBLabel" android:id="@+id/emptyCacheDesc" android:text="@string/emptyCacheDesc" android:textColor="#FFFFFF" android:layout_marginLeft="8dp"></TextView>
+
+	<TextView
+	    android:id="@+id/emptyCacheDesc"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignLeft="@+id/emptyDBLabel"
+	    android:layout_below="@+id/emptyDBLabel"
+	    android:layout_marginLeft="8dp"
+	    android:layout_marginRight="8dp"
+	    android:text="@string/emptyCacheDesc"
+	    android:textAppearance="?android:attr/textAppearanceSmall"
+	    android:textColor="#FFFFFF" >
+</TextView>
 
 
 </RelativeLayout>
